# Notebooks

./: .gitignore  .gitmodules  First.ipynb  Graphs.ipynb  Lambda_Calculus.ipynb  Movie_Analysis.ipynb  Movie_Recommender.ipynb  README.md  Reinforcement_Learning.ipynb  Revision.ipynb  Revisiting_Jupyter.ipynb  Scraper.ipynb  Sentiment_Analysis_Amazon.ipynb  Titanic.ipynb  Titanic1.ipynb  Torch.ipynb  Untitled.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: First-checkpoint.ipynb  Graphs-checkpoint.ipynb  Scraper-checkpoint.ipynb
File-Handling-and-JSON-GFG/Inventory Management System JSON- Loading Record/: Record.json
Old_Notebooks/: Revision.ipynb  Revisiting_Jupyter.ipynb  Scraper.ipynb
Old_Notebooks/Sentiment_Analysis/: Amazon_Reviews.ipynb
Old_Notebooks/deep_learning/: celsius_to_fahrenheit.ipynb  data_science.ipynb
Sentiment_Analysis/: Amazon_Reviews.ipynb  Sentiment_Analysis.ipynb
TMDB/: Movie_Classification.ipynb
course/: hello.py
course/python_io/: text_processing.ipynb
deep_learning/: Vector_Databases.md  torch_basics.ipynb
mid_term/: combinations.py  pentomin.py
