[tool.poetry]
package-mode=false
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Deven Kalra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
nltk = "^3.9.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"

spacy = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
